--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<h1>Time, Space, and Complexity</h1>
+	<p>Time complexity, efficient : Time complexity is a measure of the amount of time an algorithm takes to execute as a function of its input size. It is an essential factor in determining the performance and scalability of a program, as inefficient algorithms can lead to slow execution times and unresponsive applications.</p>
+	<p><b>Space Complexity</b> : Space complexity refers to the total amount of memory space used by an algorithm/program, including the space of input values for execution. Calculate the space occupied by variables in an algorithm/program to determine space complexity. However, people frequently confuse Space-complexity with auxiliary space.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
